# LLM-Evaluation-Framework

./: .coveragerc  .env  .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  DOCKER_BUILD_SUCCESS.md  Dockerfile  Dockerfile.ci  FINAL_COMPLETION_CHECKLIST.md  PROJECT_SUMMARY.md  PR_DRAFT.md  README.md  RELEASE_NOTES.md  SUBMISSION_READINESS.md  TEST_EXECUTION_REPORT.md  clean_repo_creation_output.txt  cli_smoke_output.txt  cli_unit_test_output.txt  docker-compose.yml  evaluator_edge_output.txt  final_test_run.txt  git_branch_demo.txt  git_status_demo.txt  llm_and_utils_test_output.txt  llm_utils_after_fix.txt  llm_utils_after_fix2.txt  metric_rag_test_output.txt  metric_ref_test_output.txt  model_stubs_output.txt  model_stubs_output2.txt  pyproject.toml  sacrebleu.py  smoke_test_run_output.txt  smoke_test_run_output_after_fix.txt  smoke_test_run_output_after_fix2.txt  smoke_test_run_output_after_fix3.txt  submission_creation_output.txt
.github/workflows/: docker-build.yml  evaluation.yml
benchmarks/: rag_benchmark.jsonl
docker_results/: results.json  results.md
examples/: config.yaml  model_a_outputs.jsonl  model_b_outputs.jsonl
results_endpoint_test/: results.json  results.md
results_eval_run/: results.json  results.md
scripts/: container_run_smoke.sh  container_run_smoke_pin_numpy.sh  container_verify.sh  container_verify_full.sh  docker_smoke.sh  make_clean_repo.py  make_submission.py
src/: openai.py
test-results/: results.json  results.md
test_run_verification/: results.json  results.md
tests/: conftest.py  test_cli_and_plugins.py  test_cli_unit.py  test_config_extra.py  test_evaluator.py  test_evaluator_edgecases.py  test_evaluator_errors.py  test_litedf_getitem.py  test_llm_judge.py  test_llm_judge_integration.py  test_llm_judge_paths.py  test_llm_judge_unit.py  test_main_entrypoint.py  test_metrics.py  test_metrics_edgecases.py  test_metrics_extra.py  test_metrics_fallbacks.py  test_metrics_rag_extra.py  test_metrics_reference_extra.py  test_metrics_reference_rag_coverage.py  test_model_stubs_and_llm_judge_disabled.py  test_reporting.py  test_reporting_additional.py  test_smoke_cli_integration.py  test_utils_comprehensive.py  test_utils_csv_comprehensive.py  test_utils_extra.py  test_utils_fallback_and_wrapper.py  test_utils_pandas_stub.py  test_utils_reporting_extra.py
(+14 files in other folders)
